# CCPP-Code

./: .gitignore  LICENSE  README.md  remember.txt
Alacrity-Lang-Old-Lexer/: Dockerfile  README.md  build.al  ccp4m.yaml  code_samples.md  fizzbuzz.al  fizzbuzz.et  fizzbuzz.md  tmp.al
AllCombinationsOfString/: combinations.cpp
Arch-Installer/: ccp4m.ini
Assembly/: README.md
BinarySearch/: README.md
BinarySearchTree/: README.md
CCP4M/: CMakeLists.txt  ccp4m.ini
CCP4M_Old/: ccp4m.ini
Calendar/: README.md
ChatRoom/: README.md
CombinationsOfNumberNoRepeatNoZeroFirstDigit/: combo.cpp
Custom-Library/: README.md
Easier-Compiling/: CMakeLists.txt  README.md
ElectruxLang/: ccp4m.ini  guidelines.txt  test.epl
ElectruxProgLang/: ccp4m.ini
ElectruxProgLang_Old/: ccp4m.ini  ccp4m.yaml
ElectruxShorthandInterpretedLanguage/: 1.epl  10.epl  2.epl  3.epl  4.epl  5.epl  6.epl  7.epl  8.epl  9.epl  args.epl  ccp4m.ini  ccp4m.yaml  math.emod  test.epl
ElectruxWorlds/: Assets.tar.bz2  CMakeLists.txt
Ethereal-VM-C/: core.c  core.h  dylib.c  dylib.h  exec_stack.c  exec_stack.h  fs.h  main.c  ret_codes.h  vec.c  vec.h  vm.c  vm.h
ExtraLargeFactorials/: README.md
FileToBinaryConvertor/: README.md
GraphImplementation/: README.md
HammingCode/: README.md
HashTableImplementation/: CMakeLists.txt  README.md
HashTableImplementation/include/: Constants.hpp  HashKey.hpp  HashTable.hpp  Stack.hpp  TemplateDefs.hpp  table.hpp
HashTableImplementation/src/: main.cpp  words.txt
HuffmanCoding/: CMakeLists.txt  README.md
INI-System/: README.md
INI_Parser_New/: CMakeLists.txt  README.md
Infix-To-Postfix/: README.md
OS_Algorithms/Bankers_Algorithm/: CMakeLists.txt
OS_Algorithms/Bankers_Algorithm/src/: main.c
OS_Algorithms/Disk_Scheduling/: CMakeLists.txt
OS_Algorithms/Disk_Scheduling/include/: common.h  disk.h  operation.h
OS_Algorithms/Disk_Scheduling/src/: 10_scan.c  8_fcfs.c  9_sstf.c
OS_Algorithms/Page_Replacement/: CMakeLists.txt
OS_Algorithms/Page_Replacement/include/: array.h
OS_Algorithms/Page_Replacement/src/: 5_fifo.c  6_lru.c  7_optimal.c
OS_Algorithms/Process_Scheduling/: CMakeLists.txt
OS_Algorithms/Process_Scheduling/include/: funcs.h  macros.h  process.h
OS_Algorithms/Process_Scheduling/src/: 1_fcfs.c  2_sjfs.c  3_priority.c  4_roundrobin.c
ProjectCreator/: CMakeLists.txt  README.md
ProjectCreator/include/: CMakeGenerator.hpp  Data.hpp  DefaultMain.hpp  DirFileFunctions.hpp  FindSDL2.hpp  FindSDL2_Image.hpp  FindSDL2_TTF.hpp  FindSFML.hpp  FlagFunctions.hpp  SDL2DefaultMain.hpp  SFMLDefaultMain.hpp  ToVector.hpp
ProjectCreator/src/: main.cpp
SFML-Graphics-Old/: CMakeLists.txt
SFML-Graphics-Old/include/: Core.hpp  Letters.hpp  PixelMap.hpp
SFML-Graphics-Old/src/: breslinemain.cpp  bresmpcirclemain.cpp  ddamain.cpp  midpointcirclemain.cpp  myname.cpp  polygon.cpp  testmain.cpp
(+361 files in other folders)
